<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id = "@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"/>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dp"
        android:background="#000000" />

    <ScrollView 
        android:fadeScrollbars="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
>
		    <Button 
		        android:id="@+id/action_settings"
		        android:layout_width="match_parent"
		        android:layout_height="48dp"
		        android:text="@string/action_settings"/>
		    <Button 
		        android:id="@+id/action_airplane_mode"
		        android:layout_width="match_parent"
		        android:layout_height="48dp"
		        android:text="@string/action_airplane_settings"/>
		    <Button 
		        android:id="@+id/action_wireless_settings"
		        android:layout_width="match_parent"
		        android:layout_height="48dp"
		        android:text="@string/action_wireless_settings"/>
		    <Button 
		        android:id="@+id/action_wifi_settings"
		        android:layout_width="match_parent"
		        android:layout_height="48dp"
		        android:text="@string/action_wifi_settings"/>
		    <Button 
		        android:id="@+id/action_nfc_settings"
		        android:layout_width="match_parent"
		        android:layout_height="48dp"
		        android:text="@string/action_nfc_settings"/>
		     <Button 
		        android:id="@+id/action_dummy"
		        android:layout_width="match_parent"
		        android:layout_height="48dp"
		        android:text="@string/action_dummy"/>
		        
		    <TextView
		        android:layout_margin="10dp"
		        android:id="@+id/description_title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/description_title"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:layout_marginTop="10dp" />
		    <View 
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="#000000" />
		    <TextView 
		        android:lineSpacingExtra="3dp"
		        android:layout_margin="5dp"
		        android:id="@+id/description"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/description"
		        android:textSize="14sp"/>
		    
		   <View 
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />
            
                        <TextView 
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_copyleft"
                android:textSize="12sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>